Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -844,7 +844,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['Review_Length'] = df.review_word_counts.map(lambda x: x == 'Short' if x < 50 else (x == 'Medium' if x < 80 else x == \"Long\")) "
+    "# Wr\n",
+    "# df['Review_Length'] = df.review_word_counts.map(lambda x: x == 'Short' if x < 50 else (x == 'Medium' if x < 80 else x == \"Long\")) "
    ]
   },
   {
