Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -850,11 +850,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.<lambda>(x)>"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df['Review_Length'] = df.review_word_counts.map(lambda x : 'Short' if x < 50 else 'Medium' if x < 80 else 'Long')"
+    "df['Review_Length'] = df.review_word_counts.map\n",
+    "(lambda x : 'Short' if x < 50 else 'Medium' if x < 80 else 'Long')"
    ]
   },
   {
