--- a/index.ipynb
+++ b/index.ipynb
@@ -850,23 +850,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<function __main__.<lambda>(x)>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-0e3b30619546>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-0e3b30619546>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    df['Review_Length'] = df.review_word_counts.\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
-    "df['Review_Length'] = df.review_word_counts.map\n",
-    "(lambda x : 'Short' if x < 50 else 'Medium' if x < 80 else 'Long')"
+    "df['Review_Length'] = df.review_word_counts.map(lambda x : 'Short' if x < 50 else 'Medium' if x < 80 else 'Long')"
    ]
   },
   {
