Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -850,20 +850,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-9-0e3b30619546>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-0e3b30619546>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    df['Review_Length'] = df.review_word_counts.\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "df['Review_Length'] = df.review_word_counts.map(lambda x : 'Short' if x < 50 else 'Medium' if x < 80 else 'Long')"
+    "df['Review_Length'] = df.review_word_counts.\\\n",
+    "map(lambda x : 'Short' if x < 50 else 'Medium' if x < 80 else 'Long')"
    ]
   },
   {
