Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1073,7 +1073,7 @@
     }
    ],
    "source": [
-    "df.date_new = pd.to_datetime(df.date, format = \"%d-%m-%Y\")"
+    "# df.date_new = pd.to_datetime(df.date, format = \"%d-%m-%Y\")"
    ]
   },
   {
