--- a/.~index.ipynb
+++ b/.~index.ipynb
@@ -1078,16 +1078,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['date'] = pd.to_datetime(df.date).dt.strftime('%d-%m-%Y')"
+    "df['date'] = pd.to_datetime(df.date).dt.strftime('%d-%m/%Y')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1133,7 +1133,7 @@
        "      <td>1</td>\n",
        "      <td>pomGBqfbxcqPv14c3XH-ZQ</td>\n",
        "      <td>0</td>\n",
-       "      <td>13-11-2012</td>\n",
+       "      <td>13/11/2012</td>\n",
        "      <td>0</td>\n",
        "      <td>dDl8zu1vWPdKGihJrwQbpw</td>\n",
        "      <td>5</td>\n",
@@ -1150,7 +1150,7 @@
        "      <td>2</td>\n",
        "      <td>jtQARsP6P-LbkyjbO1qNGg</td>\n",
        "      <td>1</td>\n",
-       "      <td>23-10-2014</td>\n",
+       "      <td>23/10/2014</td>\n",
        "      <td>1</td>\n",
        "      <td>LZp4UX5zK3e-c5ZGSeo3kA</td>\n",
        "      <td>1</td>\n",
@@ -1167,7 +1167,7 @@
        "      <td>4</td>\n",
        "      <td>Ums3gaP2qM3W1XcA5r6SsQ</td>\n",
        "      <td>0</td>\n",
-       "      <td>09-05-2014</td>\n",
+       "      <td>05/09/2014</td>\n",
        "      <td>0</td>\n",
        "      <td>jsDu6QEJHbwP2Blom1PLCA</td>\n",
        "      <td>5</td>\n",
@@ -1184,8 +1184,134 @@
        "      <td>5</td>\n",
        "      <td>vgfcTvK81oD4r50NMjU2Ag</td>\n",
        "      <td>0</td>\n",
-       "      <td>25-02-2011</td>\n",
+       "      <td>25/02/2011</td>\n",
        "      <td>0</td>\n",
        "      <td>pfavA0hr3nyqO61oupj-lA</td>\n",
        "      <td>1</td>\n",
-       "      <td>This place sucks. The customer service is horr...<
+       "      <td>This place sucks. The customer service is horr...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>msQe1u7Z_XuqjGoqhB0J5g</td>\n",
+       "      <td>1</td>\n",
+       "      <td>02</td>\n",
+       "      <td>82</td>\n",
+       "      <td>Long</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10</td>\n",
+       "      <td>yFumR3CWzpfvTH2FCthvVw</td>\n",
+       "      <td>0</td>\n",
+       "      <td>15/06/2016</td>\n",
+       "      <td>0</td>\n",
+       "      <td>STiFMww2z31siPY7BWNC2g</td>\n",
+       "      <td>5</td>\n",
+       "      <td>I have been an Emerald Club member for a numbe...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>TlvV-xJhmh7LCwJYXkV-cg</td>\n",
+       "      <td>25</td>\n",
+       "      <td>06</td>\n",
+       "      <td>32</td>\n",
+       "      <td>Short</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0             business_id  cool        date  funny  \\\n",
+       "0           1  pomGBqfbxcqPv14c3XH-ZQ     0  13/11/2012      0   \n",
+       "1           2  jtQARsP6P-LbkyjbO1qNGg     1  23/10/2014      1   \n",
+       "2           4  Ums3gaP2qM3W1XcA5r6SsQ     0  05/09/2014      0   \n",
+       "3           5  vgfcTvK81oD4r50NMjU2Ag     0  25/02/2011      0   \n",
+       "4          10  yFumR3CWzpfvTH2FCthvVw     0  15/06/2016      0   \n",
+       "\n",
+       "                review_id  stars  \\\n",
+       "0  dDl8zu1vWPdKGihJrwQbpw      5   \n",
+       "1  LZp4UX5zK3e-c5ZGSeo3kA      1   \n",
+       "2  jsDu6QEJHbwP2Blom1PLCA      5   \n",
+       "3  pfavA0hr3nyqO61oupj-lA      1   \n",
+       "4  STiFMww2z31siPY7BWNC2g      5   \n",
+       "\n",
+       "                                                text  useful  \\\n",
+       "0  I love this place! My fiance And I go here atl...       0   \n",
+       "1  Terrible. Dry corn bread. Rib tips were all fa...       3   \n",
+       "2  Delicious healthy food. The steak is amazing. ...       0   \n",
+       "3  This place sucks. The customer service is horr...       2   \n",
+       "4  I have been an Emerald Club member for a numbe...       0   \n",
+       "\n",
+       "                  user_id  stars_squared month  review_word_counts  \\\n",
+       "0  msQe1u7Z_XuqjGoqhB0J5g             25    11                  58   \n",
+       "1  msQe1u7Z_XuqjGoqhB0J5g              1    10                  30   \n",
+       "2  msQe1u7Z_XuqjGoqhB0J5g             25    09                  30   \n",
+       "3  msQe1u7Z_XuqjGoqhB0J5g              1    02                  82   \n",
+       "4  TlvV-xJhmh7LCwJYXkV-cg             25    06                  32   \n",
+       "\n",
+       "  Review_Length  \n",
+       "0        Medium  \n",
+       "1         Short  \n",
+       "2         Short  \n",
+       "3          Long  \n",
+       "4         Short  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(test_date)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "Great! Hopefully you're getting the hang of lambda functions now! It's important not to overuse them - it will often make more sense to define a function so that it's reusable elsewhere. But whenever you need to quickly apply some simple processing to a collection of data you have a new technique that will help you to do just that. It'll also be useful if you're reading someone else's code that happens to use lambdas."
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.6.6"
+  }
+ },
+ "nbformat": 4,
+ "nbformat_minor": 2
+}
