Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1082,7 +1082,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['date'] = pd.to_datetime(df.date).dt.strftime('%d-%m-%Y')"
+    "df['date'] = pd.to_datetime(df.date).dt.\n",
+    "strftime('%d-%m-%Y')"
    ]
   },
   {
