--- a/index.ipynb
+++ b/index.ipynb
@@ -1082,8 +1082,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['date'] = pd.to_datetime(df.date).dt.\n",
-    "strftime('%d-%m-%Y')"
+    "df['date'] = pd.to_datetime(df.date).dt.strftime('%d-%m-%Y')"
    ]
   },
   {
