Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1265,22 +1265,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "str"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "type(test_date)"
+    "df['date'] = df['date'].dt.strftime('%m/%d/%Y')"
    ]
   },
   {
