Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -845,7 +845,8 @@
    "outputs": [],
    "source": [
     "# Wrong code\n",
-    "# df['Review_Length'] = df.review_word_counts.map(lambda x: x == 'Short' if x < 50 else (x == 'Medium' if x < 80 else x == \"Long\")) "
+    "# df['Review_Length'] = df.review_word_counts.\\\n",
+    "# map(lambda x: x == 'Short' if x < 50 else (x == 'Medium' if x < 80 else x == \"Long\")) "
    ]
   },
   {
