--- a/index.ipynb
+++ b/index.ipynb
@@ -846,6 +846,9 @@
    "source": [
     "# Wrong code\n",
     "# df['Review_Length'] = df.review_word_counts.\\\n",
+    "# map(lambda x: x == 'Short' if x < 50 else (x == 'Medium' if x < 80 else x == \"Long\")) \n",
+    "\n",
+    "# df['Review_Length'] = df.review_word_counts.\\\n",
     "# map(lambda x: x == 'Short' if x < 50 else (x == 'Medium' if x < 80 else x == \"Long\")) "
    ]
   },
