--- a/index.ipynb
+++ b/index.ipynb
@@ -848,8 +848,9 @@
     "# df['Review_Length'] = df.review_word_counts.\\\n",
     "# map(lambda x: x == 'Short' if x < 50 else (x == 'Medium' if x < 80 else x == \"Long\")) \n",
     "\n",
+    "# The following probabely gonna work\n",
     "# df['Review_Length'] = df.review_word_counts.\\\n",
-    "# map(lambda x: x == 'Short' if x < 50 else (x == 'Medium' if x < 80 else x == \"Long\")) "
+    "# map(lambda x: 'Short' if x < 50 else (x == 'Medium' if x < 80 else x == \"Long\")) "
    ]
   },
   {
