Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -850,7 +850,7 @@
     "\n",
     "# The following probabely gonna work\n",
     "# df['Review_Length'] = df.review_word_counts.\\\n",
-    "# map(lambda x: 'Short' if x < 50 else (x == 'Medium' if x < 80 else x == \"Long\")) "
+    "# map(lambda x: 'Short' if x < 50 else ('Medium' if x < 80 else x \"Long\")"
    ]
   },
   {
